MCA-9 auth and security is all done for prod and dev

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# Application name
 spring.application.name=musical-catalog-api
+
+# Active profile
+spring.profiles.active=dev
+
+# Common JWT Configuration
+application.security.jwt.expiration=86400000
