the fix for album and song not working properly when post

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=musical-catalog-api
 
 # Active profile
-spring.profiles.active=dev
+spring.profiles.active=prod  
 
 # Common JWT Configuration
-application.security.jwt.expiration=86400000
+application.security.jwt.expiration=69420000
