--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/musical-catalog
+spring.data.mongodb.uri=mongodb://mongodb:27017/musical-catalog-prod
 spring.data.mongodb.database=musical-catalog-prod
 
 # Disable JPA/Hibernate
